# FLiNG-Downloader

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  build.cmd  icon.rc  icon.rc.in  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  i18n-sync.yml  make-release.yml
cmake/: FetchONNXRuntime.cmake
docs/: ANTIVIRUS_FAQ.md  README.en.md  README.ja.md  README.md  image_inference.cpp
qml/: Main.qml
qml/components/: CustomTitleBar.qml  DetailDrawer.qml  DownloadListPopup.qml  IconButton.qml  ProgressIndicator.qml  SettingsDialog.qml  StyledButton.qml  StyledComboBox.qml  StyledSwitch.qml  StyledTable.qml  StyledTextField.qml
qml/layouts/: AppMenuBar.qml  AppStatusBar.qml
qml/pages/: DownloadedPage.qml  ModifierDetailPanel.qml  SearchPage.qml
qml/themes/: ThemeProvider.qml
resources/: fling_translations.db  resources.qrc
resources/models/: game-cover.names
resources/translations/: flingdownloader_en_US.qm  flingdownloader_en_US.ts  flingdownloader_ja_JP.qm  flingdownloader_ja_JP.ts
src/: AppUpdateManager.cpp  Backend.cpp  ConfigManager.cpp  CoverExtractor.cpp  DatabaseUpdateManager.cpp  DownloadManager.cpp  FileSystem.cpp  GameMappingManager.cpp  ModifierInfoManager.cpp  ModifierManager.cpp  ModifierParser.cpp  NetworkManager.cpp  SearchManager.cpp  TranslationDatabase.cpp  UpdateManager.cpp  main.cpp  translator.cpp
src/include/: AppUpdateManager.h  Backend.h  ConfigManager.h  CoverExtractor.h  DatabaseUpdateManager.h  DownloadManager.h  DownloadedModifierModel.h  FileSystem.h  GameMappingManager.h  LanguageManager.h  ModifierInfoManager.h  ModifierListModel.h  ModifierManager.h  ModifierParser.h  NetworkManager.h  SearchManager.h  ThemeManager.h  TranslationDatabase.h  TranslationTextUtils.h  UpdateManager.h  translator.h
src/launcher/: main.cpp
tests/: CMakeLists.txt  main.cpp
tests/fixtures/: test_support.cpp  test_support.h
tests/integration/: database_update_manager_integration_test.cpp  search_manager_integration_test.cpp
tests/performance/: benchmark_main.cpp  cover_extractor_benchmark.cpp
tests/unit/: app_update_manager_test.cpp  backend_test.cpp  download_manager_test.cpp  file_system_test.cpp  game_mapping_manager_test.cpp  translation_database_test.cpp
tools/: FLiNG Downloader-Setup.iss  i18n.cmd
